# test_amazon_recomendations

./: .gitignore  Dockerfile  README.md  README.org  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  settings.py  settings_worker.py
tar_api/: app.py  crud.py  deps.py  tasks.py
tar_api/api/: v1.py
tar_api/models/: __init__.py  database.py  products.py
tar_api/models/alembic/: env.py
tar_api/models/alembic/versions/: 0b43b9043b64_adding_verified_and_attributes.py  1c64f5e43789_adding_image_url_column.py  53a0362e1b51_adding_date_and_raiting.py  a2e0869abf09_adding_review_id.py  ba7be330148a_adding_link_column.py  c00b9b38ef89_adding_keywords_field.py  eadc6fe8c2a8_initial_database.py
tar_api/schema/: api_v1.py  products.py
tar_api/tests/: app_test.py
